@@ -124,3 +124,8 @@ you need to add `@ScanScopedBeans` to the spec and make sure that the scope allo
 NOTE: The `request` and `session` scope will throw exceptions by default, if there is no active request/session.
 
 You can limit the scanning to certain scopes by using the `value` property of `@ScanScopedBeans`.
+
+== Shared fields injection
+
+Due to certain limitations, injection into shared fields is not enabled by default but can be opted-in to.
+Refer to javadoc of `org.spockframework.spring.EnableSharedInjection` for further information.
