@@ -34,6 +34,9 @@ public class SpringInterceptor extends AbstractMethodInterceptor {
   @Override
   public void interceptSetupSpecMethod(IMethodInvocation invocation) throws Throwable {
     manager.beforeTestClass();
+    if (invocation.getSpec().isAnnotationPresent(EnableSharedInjection.class)) {
+      manager.prepareTestInstance(invocation.getInstance());
+    }
     invocation.proceed();
   }
 
